reverting to CMS from G1GC b/c Java 7 breaks CAPTCHAs